bindings/lisp/fae/string.lisp

(in-package :cl-user)
(defctype string-utf8 (:pointer char8))
(defctype string-utf16 (:pointer char16))
(defctype string-utf32 (:pointer char32))
(define-foreign-type string-type () () (:actual-type :pointer))
(define-parse-method string () (make-instance 'string-type))
(defclass string () ((string-ptr :initarg :string-ptr)))
(defmethod translate-to-foreign (x (type string-type)) (slot-value x 'string-ptr))
(defmethod translate-from-foreign (x (type string-type)) (make-instance 'string :string-ptr x))
(defctype string-file-path string)
(defcfun (string-empty "fae_string_empty") string)
(defcfun (string-single "fae_string_single") string (a char16))
(defcfun (string-repeat "fae_string_repeat") string (a :int) (b char16))
(defcfun (string-copy "fae_string_copy") string (a string))
(defcfun (string-append "fae_string_append") string (a string) (b string))
(defcfun (string-dappend "fae_string_dappend") string (a string) (b string))
(defcfun (string-destroy "fae_string_destroy") :void (a string))
(defcfun (string-length "fae_string_length") :int (a string))
(defcfun (string-char-at "fae_string_char_at") char16 (a :int) (b string))
(defctype string-show (:pointer :void))
(defcfun (string-show "fae_string_show") string (a ptr))
(defcfun (string-to-string "fae_string_to_string") string (a ptr))
(defcfun (string-to-json "fae_string_to_json") string (a ptr))
(defcfun (string-from-json "fae_string_from_json") ptr (a string))
(defcfun (string-to-utf8 "fae_string_to_utf8") string-utf8 (a string))
(defcfun (string-to-utf16 "fae_string_to_utf16") string-utf16 (a string))
(defcfun (string-to-utf32 "fae_string_to_utf32") string-utf32 (a string))
(defcfun (string-to-cf-string "fae_string_to_cf_string") (:pointer :void) (a string))
(defcfun (string-from-utf8 "fae_string_from_utf8") string (a string-utf8))
(defcfun (string-from-utf16 "fae_string_from_utf16") string (a string-utf16))
(defcfun (string-from-utf32 "fae_string_from_utf32") string (a string-utf32))
(defcfun (string-from-cf-string "fae_string_from_cf_string") string (a (:pointer :void)))
(defcfun (string-matches "fae_string_matches") :boolean (a string) (b string))
(defcfun (string-format-integral "fae_string_format_integral") string (a (:pointer :char)) (b :long))
(defcfun (string-format-floating "fae_string_format_floating") string (a (:pointer :char)) (b :double))